# twsbot

./: README.md  pyproject.toml
src/twsbot/: account.py  cli.py  core.py  twsapi.py  utils.py
